2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Verify compatibility with PHP 8.2
	* Release version 4.1.0

2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update example code for service instanciation
	* Verify compatibility with TYPO3 12 LTS
	* Relase version 4.0.1

2022-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Relase version 4.0.0

2022-12-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 12, resolves #9
	* Ensure compatibility with PHP 8.1

2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Switch to new connector service registration API, resolves #10

2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Relase version 3.0.0

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8

2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 11, drop support for TYPO3 8 and 9

2021-02-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update composer manifest
	* Release version 2.4.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 2.4.0

2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Implement new configuration check API, resolves #7
	* Update documentation settings, resolves #8

2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10

2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Drop compatibility with TYPO3 7, prepare for TYPO3, code cleanup, resolves #6
	* Add functional tests
	* Release version 2.3.0

2018-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated documentation regarding allowed absolute file paths
	* Released version 2.2.2 and 2.2.3

2018-02-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated headers initialization (thanks to Alex Böswetter)
	* Released version 2.2.1

2018-01-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.2.0
