@@ -5,12 +5,12 @@ release = 4.1.0
 
 [html_theme_options]
 github_branch = master
-github_repository = cobwebch/svconnector_feed
+github_repository = cobwebch/svconnector_mobilede
 project_contact =
 project_discussions =
-project_home = https://github.com/cobwebch/svconnector_feed/
-project_issues = https://github.com/cobwebch/svconnector_feed/issues/
-project_repository = https://github.com/cobwebch/svconnector_feed/
+project_home = https://github.com/cobwebch/svconnector_mobilede/
+project_issues = https://github.com/cobwebch/svconnector_mobilede/issues/
+project_repository = https://github.com/cobwebch/svconnector_mobilede/
 
 [intersphinx_mapping]
 svconnector = http://docs.typo3.org/typo3cms/extensions/svconnector/
