@@ -1,12 +1,12 @@
-[![Latest Stable Version](https://poser.pugx.org/cobweb/svconnector_feed/v)](https://packagist.org/packages/cobweb/svconnector_feed)
-[![Total Downloads](http://poser.pugx.org/cobweb/svconnector_feed/downloads)](https://packagist.org/packages/cobweb/svconnector_feed)
-[![Monthly Downloads](http://poser.pugx.org/cobweb/svconnector_feed/d/monthly)](https://packagist.org/packages/cobweb/svconnector_feed)
-[![Daily Downloads](http://poser.pugx.org/cobweb/svconnector_feed/d/daily)](https://packagist.org/packages/cobweb/svconnector_feed)
-[![PHP Version Require](http://poser.pugx.org/cobweb/svconnector_feed/require/php)](https://packagist.org/packages/cobweb/svconnector_feed)
+[![Latest Stable Version](https://poser.pugx.org/cobweb/svconnector_mobilede/v)](https://packagist.org/packages/cobweb/svconnector_mobilede)
+[![Total Downloads](http://poser.pugx.org/cobweb/svconnector_mobilede/downloads)](https://packagist.org/packages/cobweb/svconnector_mobilede)
+[![Monthly Downloads](http://poser.pugx.org/cobweb/svconnector_mobilede/d/monthly)](https://packagist.org/packages/cobweb/svconnector_mobilede)
+[![Daily Downloads](http://poser.pugx.org/cobweb/svconnector_mobilede/d/daily)](https://packagist.org/packages/cobweb/svconnector_mobilede)
+[![PHP Version Require](http://poser.pugx.org/cobweb/svconnector_mobilede/require/php)](https://packagist.org/packages/cobweb/svconnector_mobilede)
 
 # Connector service - XML Feed
 
 This service provides a simple API for reading XML sources (local or remote) and return their content
 as a PHP array or an XML structure.
 
-Read the manual for more details: https://docs.typo3.org/typo3cms/extensions/svconnector_feed/
+Read the manual for more details: https://docs.typo3.org/typo3cms/extensions/svconnector_mobilede/
