@@ -1,10 +1,10 @@
 <?php
 
 $EM_CONF[$_EXTKEY] = [
-    'title' => 'Connector service - XML Feed',
-    'description' => 'Connector service for XML files or RSS feeds',
+    'title' => 'Connector service - XML Feed (mobile.de)',
+    'description' => 'Connector service for mobile.de Search API XML Feed',
     'category' => 'services',
-    'version' => '4.1.0',
+    'version' => '4.1.0-mobile.de',
     'state' => 'stable',
     'uploadfolder' => 0,
     'createDirs' => '',
