@@ -1,3 +1,7 @@
+2024-06-28 Bastian Holzem (teufels GmbH)  <digital@teufels.com>
+
+	* extension svconnector_feed for mobile.de Search API
+
 2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Verify compatibility with PHP 8.2
